--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="CASTED! is a student media publication that aims to tell the stories of students on campus. We platform experiences, amplify voices, and capture stories that matter." />
     <title>CASTED!</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="icon" href="/castedicon.png" type="image">
   </head>
   <body>
