--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
     <title>CASTED!</title>
     <link rel="icon" href="/castedicon.png" type="image">
+    <link rel="preload" href="/orangeLogo.webp" as="image">
+    <link rel="preload" href="/src/fonts/Sprite Graffiti.otf" as="font" type="font/otf" crossorigin>
   </head>
   <body>
     <div id="root"></div>
