--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="icon" href="/castedicon.png" type="image">
     <link rel="preload" href="/orangeLogo.webp" as="image">
     <link rel="preload" href="/slider1.webp" as="image">
-    <link rel="preload" href="/src/fonts/Sprite Graffiti.otf" as="font" type="font/otf" crossorigin>
+    <link rel="preload" href="/slider2.webp" as="image">
+    <link rel="preload" href="/slider3.webp" as="image">
+    <link rel=" preload" href ="/slider4.webp" as= "image">
   </head>
   <body>
     <div id="root"></div>
