--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <meta name="google-site-verification" content="zlD15qlE6WtpV34pT9QFRJU7E_2kLTxU-0tfE8v-U4g" />
     <title>CASTED!</title>
     <link rel="icon" href="/castedicon.png" type="image">
-    <!-- <link rel="preload" as="image" href="/slider1.webp" fetchpriority="high">
-    <link rel="preload" as="image" href="/slider2.webp">
-    <link rel="preload" as="image" href="/slider3.webp">
-    <link rel="preload" as="image" href="/slider4.webp"> -->
+    <link rel="preload" as="image" href="/slider1.webp" fetchpriority="high">
   </head>
   <body>
     <div id="root"></div>
