--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <meta name="google-site-verification" content="zlD15qlE6WtpV34pT9QFRJU7E_2kLTxU-0tfE8v-U4g" />
     <title>CASTED!</title>
     <link rel="icon" href="/castedicon.png" type="image">
+    <link rel="preload" as="image" href="/orangeLogo.webp" fetchpriority="high">
     <link rel="preload" as="image" href="/slider1.webp" fetchpriority="high">
+    <link rel="dns-prefetch" href="https://whatsapp.com">
+    <link rel="dns-prefetch" href="https://www.youtube.com">
+    <link rel="dns-prefetch" href="https://firebaseapp.com">
+    <link rel="dns-prefetch" href="https://firebasestorage.app">
   </head>
   <body>
     <div id="root"></div>
