--- a/index.html
+++ b/index.html
@@ -7,8 +7,14 @@
     <meta name="google-site-verification" content="zlD15qlE6WtpV34pT9QFRJU7E_2kLTxU-0tfE8v-U4g" />
     <title>CASTED!</title>
     <link rel="icon" href="/castedicon.png" type="image">
-    <link rel="preload" as="image" href="/orangeLogo.webp" fetchpriority="high">
+    <!-- Preload critical LCP image with highest priority -->
     <link rel="preload" as="image" href="/slider1.webp" fetchpriority="high">
+    <link rel="preload" as="image" href="/orangeLogo.webp" fetchpriority="high">
+    <!-- Preconnect to external domains -->
+    <link rel="preconnect" href="https://whatsapp.com">
+    <link rel="preconnect" href="https://www.youtube.com">
+    <link rel="preconnect" href="https://firebaseapp.com">
+    <link rel="preconnect" href="https://firebasestorage.app">
     <link rel="dns-prefetch" href="https://whatsapp.com">
     <link rel="dns-prefetch" href="https://www.youtube.com">
     <link rel="dns-prefetch" href="https://firebaseapp.com">
@@ -17,5 +23,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- Prevent layout shift by reserving space for hero section -->
+    <style>
+      /* Critical CSS to prevent layout shift */
+      #root { min-height: 100vh; }
+      body { margin: 0; padding: 0; }
+    </style>
   </body>
 </html>
