--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-P7LPS5CSLP"></script>
+    <link rel="manifest" href="/manifest.json">
+    <meta name="theme-color" content="#brown">
+
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
