PWA with option for safari and notification

--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
       #root { min-height: 100vh; }
       body { margin: 0; padding: 0; }
     </style>
-<<<<<<< HEAD
-=======
     <script>
       if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('/service-worker.js')
@@ -50,6 +48,14 @@
           .catch(err => console.error('Service Worker registration failed:', err));
     }
   </script>
->>>>>>> 37a451d836eb4bc69fca049126dd2cefa40998ef
+  <script src="https://cdn.onesignal.com/sdks/web/v16/OneSignalSDK.page.js" defer></script>
+  <script>
+    window.OneSignalDeferred = window.OneSignalDeferred || [];
+    OneSignalDeferred.push(async function(OneSignal) {
+      await OneSignal.init({
+        appId: "aa7e1e73-cbba-49d2-a2c8-2712bea0b9f5",
+      });
+   });
+</script>
   </body>
 </html>
