PWA with safari pop up changes 3 and notification inclusion

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-P7LPS5CSLP"></script>
     <link rel="manifest" href="/manifest.json">
     <meta name="theme-color" content="#brown">
