--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <script type="module" src="/src/main.jsx" defer></script>
     <!-- Prevent layout shift by reserving space for hero section -->
     <style>
       /* Critical CSS to prevent layout shift */
