--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     <title>CASTED!</title>
     <link rel="icon" href="/castedicon.png" type="image">
     <!-- Preload critical LCP image with highest priority -->
-    <link rel="preload" as="image" href="/slider1.webp" fetchpriority="high">
-    <link rel="preload" as="image" href="/orangeLogo.webp" fetchpriority="high">
+    <link rel="preload" as="image" href="/slider1.webp" >
+    <link rel="preload" as="image" href="/orangeLogo.webp">
     <!-- Preconnect to external domains -->
     <link rel="preconnect" href="https://whatsapp.com">
     <link rel="preconnect" href="https://www.youtube.com">
