--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </style>
     <script>
       if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('/service-worker.js')
+        navigator.serviceWorker.register('/firebase-messaging-sw.js')
           .then(() => console.log('Service Worker registered!'))
           .catch(err => console.error('Service Worker registration failed:', err));
     }
