--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="CASTED! Publications is a student media publication that aims to tell the stories of students on campus. We platform experiences, amplify voices, and capture stories that matter." />
+    <!-- <meta name="description" content="CASTED! Publications is a student media publication that aims to tell the stories of students on campus. We platform experiences, amplify voices, and capture stories that matter." /> -->
     <meta name="google-site-verification" content="zlD15qlE6WtpV34pT9QFRJU7E_2kLTxU-0tfE8v-U4g" />
     <title>CASTED!</title>
     <link rel="icon" href="/castedicon.png" type="image">
