--- a/index.html
+++ b/index.html
@@ -32,8 +32,25 @@
     <link rel="dns-prefetch" href="https://firebaseapp.com">
     <link rel="dns-prefetch" href="https://firebasestorage.app">
     <!-- Google tag (gtag.js) -->
-    <link rel="preload" href="/assets/index.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="/assets/index.css"></noscript>
+    <script>
+      const observer = new MutationObserver((mutations) => {
+        for (const mutation of mutations) {
+          for (const node of mutation.addedNodes) {
+            if (node.tagName === 'LINK' && node.rel === 'stylesheet') {
+              // It's the CSS link!
+              node.rel = 'preload';
+              node.as = 'style';
+              node.onload = () => {
+                node.rel = 'stylesheet';
+              };
+              observer.disconnect(); // We're done
+            }
+          }
+        }
+      });
+
+      observer.observe(document.head, { childList: true });
+    </script>
   </head>
   <body>
     <div id="root"></div>
